Cambio de lenguaje según atributo

--- a/Proyecto_HTMLyCSS/reto5/conf/configEN.json
+++ b/Proyecto_HTMLyCSS/reto5/conf/configEN.json
@@ -10,7 +10,7 @@
 	"musica":"My favorite music style",
 	"video_juego":"Favorite video games",
 	"lenguajes":"Languages learned",
-	"email":"please send me a email to [email], if you need to contact me",
+	"email":"Please send me a email to [email], if you need to contact me",
 	"buscar": "Search",
 	"saludo": "Hi",
 	"sinResultados": "No students found with the name: [query]"
